objects/JBCXM__TransactionLines__c.object
<CustomObject>
    <description>Transactions represent atomic financial transactions with a Customer. Detailed line items under each transaction is stored in the Trasnaction Lines object.</description>
    <fields>
        <fullName>JBCXM__ASV__c</fullName>
        <description>ASV Amount against the Transaction Line, if applicable (based on Transaction Type).</description>
        <inlineHelpText>ASV Amount against the Transaction Line, if applicable (based on Transaction Type).</inlineHelpText>
        <label>ASV</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>JBCXM__Booking__c</fullName>
        <description>Enter Booking Amount.</description>
        <inlineHelpText>Enter Booking Amount.</inlineHelpText>
        <label>Booking</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JBCXM__Date__c</fullName>
        <description>Transaction Date.</description>
        <inlineHelpText>Transaction Date.</inlineHelpText>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>JBCXM__MRR__c</fullName>
        <description>MRR amount, calculated based on Booking Amount and Term</description>
        <inlineHelpText>MRR amount, calculated based on Booking Amount and Term</inlineHelpText>
        <label>MRR</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>JBCXM__NextRenewalDate__c</fullName>
        <description>Next Renewal Date determined based on the Original Transaction.</description>
        <inlineHelpText>Next Renewal Date</inlineHelpText>
        <label>Next Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>JBCXM__OneTimeRevenue__c</fullName>
        <defaultValue>0</defaultValue>
        <description>One-time Revenue</description>
        <inlineHelpText>One-time Revenue</inlineHelpText>
        <label>OneTime Revenue</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>JBCXM__OrderNumber__c</fullName>
        <description>Order Number, external reference,</description>
        <inlineHelpText>Order Number (may be optionally used as an external reference)</inlineHelpText>
        <label>Order Number</label>
        <referenceTo>JBCXM__TransactionHeader__c</referenceTo>
        <relationshipLabel>Transaction Lines</relationshipLabel>
        <relationshipName>TransactionLinesOrderNumber</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>JBCXM__RevRecEndDate__c</fullName>
        <description>Revenue Recognition End Date - yet to be implemented.</description>
        <inlineHelpText>Revenue Recognition End Date.</inlineHelpText>
        <label>Revenue Recognition End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>JBCXM__RevRecStartDate__c</fullName>
        <description>Revenue Recognition Start Date - yet to be implemented.</description>
        <inlineHelpText>Revenue Recognition Start Date</inlineHelpText>
        <label>Revenue Recurring Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>JBCXM__Statistical__c</fullName>
        <description>Statistical Amount under the Transaction Line.</description>
        <inlineHelpText>Statistical Amount under the Transaction Line.</inlineHelpText>
        <label>Statistical</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JBCXM__Term__c</fullName>
        <description>Booking term in months.</description>
        <inlineHelpText>Booking term in months.</inlineHelpText>
        <label>Term</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JBCXM__TransactionLines__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Transaction line item.</description>
        <inlineHelpText>Transaction line item.</inlineHelpText>
        <label>Transaction Lines</label>
        <referenceTo>JBCXM__TransactionType__c</referenceTo>
        <relationshipLabel>Transaction Lines</relationshipLabel>
        <relationshipName>TransactionLinesTL</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__Type__c</fullName>
        <description>Transaction Type - Recurring, One-time etc.</description>
        <formula>JBCXM__TransactionLines__r.JBCXM__Type__c</formula>
        <inlineHelpText>Transaction Type</inlineHelpText>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__Users__c</fullName>
        <inlineHelpText>User Count / Licenses</inlineHelpText>
        <label>Users</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Transaction Lines(Deprecated)</label>
    <listViews>
        <fullName>JBCXM__All</fullName>
        <columns>JBCXM__OrderNumber__c</columns>
        <columns>NAME</columns>
        <columns>JBCXM__TransactionLines__c</columns>
        <columns>JBCXM__Type__c</columns>
        <columns>JBCXM__Booking__c</columns>
        <columns>JBCXM__ASV__c</columns>
        <columns>JBCXM__MRR__c</columns>
        <columns>JBCXM__OneTimeRevenue__c</columns>
        <columns>JBCXM__Users__c</columns>
        <columns>JBCXM__Statistical__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Transaction Lines Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transaction Lines(Deprecated)</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>